# Glitter

./: .clang-format  CMakeLists.txt  README.md  get_latest_deps.sh
libs/: CMakeLists.txt
libs/compile-interfaces/compile-options-private/: CMakeLists.txt
libs/compile-interfaces/compile-options-public/: CMakeLists.txt
libs/glitter/: CMakeLists.txt  GlitterConfig.cmake
libs/glitter/include/glitter/: api-data-inl.h  api-data.h  gapi.h
libs/glitter/include/glitter/vulkan/: vulkan-helpers.h
libs/glitter/src/: gapi.cpp
libs/glitter/src/vulkan/: vulkan-helpers.cpp
src/: CMakeLists.txt
src/benchmarks/: CMakeLists.txt
src/samples/: CMakeLists.txt  sample0.cpp
src/tests/: CMakeLists.txt
